deprecated `destination.service.resource` field (https://github.com/elastic/apm/blob/main/specs/agents/tracing-spans-service-target.md[spec]). All instrumentations have
been updated to set appropriate service target values. If necessary, e.g. for manual
instrumentation, a new public <<span-setservicetarget>> API has been added to specify these values.
({pull}2882[#2882])
+
As part of this change, improvements have been made to some module instrumentations:
+
  ** `redis` and `ioredis`: `span.type` has changed from "cache" to "db" per https://github.com/elastic/apm/blob/main/specs/agents/tracing-instrumentation-db.md#redis[spec]
  ** `mongodb`: `span.action` used to be "query", now it will be the mongodb command name, e.g. "find", "insert".
  ** `mongodb` and `mongodb-core`: `span.db.instance` is now set to the database name ({issues}1494[#1494])
  ** `mysql` and `mysql2`: `span.db.{instance,user}` are now populated.
  ** `@elastic/elasticsearch`: The cluster name is heuristically determined for Elastic Cloud deployments and used for the service target name.
  ** `sqs`: `span.destination.{address,port}` are now populated.
  ** `pg`: `span.db.{instance,user}` are now populated.
  ** `cassandra-driver`: the Cassandra keyspace is captured for service target data, if available.
  ** OpenTelemetry Bridge: OTel spans with kind PRODUCER and CLIENT are now handled as exit spans (e.g. span compression could apply).

* Support instrumentation of `@koa/router` (and `koa-router`) versions 11 and 12.
  Contributed by @sibelius. ({issues}2811[#2811])

* Support instrumentation of tedious@15. ({pull}2897[#2897])

* Improve the captured information for Elasticsearch client instrumentation.
  For all outgoing Elasticsearch client requests, the full HTTP url is
  now captured (stored in the "url.original" field). For Elasticsearch requests
  that do a search the outgoing request body is captured (to the
  "span.db.statement" field), as before, but the format has changed to only