@@ -102,6 +102,37 @@ Span.prototype.end = function (endTime) {
 
   this._setOutcomeFromSpanEnd()
 
+  this._inferServiceTargetAndDestinationService()
+
+  this.ended = true
+  this._agent.logger.debug('ended span %o', { span: this.id, parent: this.parentId, trace: this.traceId, name: this.name, type: this.type, subtype: this.subtype, action: this.action })
+
+  if (this._capturedStackTrace !== null &&
+      this._agent._conf.spanStackTraceMinDuration >= 0 &&
+      this._duration / 1000 >= this._agent._conf.spanStackTraceMinDuration) {
+    // NOTE: This uses a promise-like thing and not a *real* promise
+    // because passing error stacks into a promise context makes it
+    // uncollectable by the garbage collector.
+    this._stackObj = new Value()
+    var self = this
+    gatherStackTrace(
+      this._agent.logger,
+      this._capturedStackTrace,
+      this._agent._conf.sourceLinesSpanAppFrames,
+      this._agent._conf.sourceLinesSpanLibraryFrames,
+      TEST ? null : filterCallSite,
+      function (_err, stacktrace) {
+        // _err from gatherStackTrace is always null.
+        self._stackObj.resolve(stacktrace)
+      }
+    )
+  }
+
+  this._agent._instrumentation.addEndedSpan(this)
+  this.transaction._captureBreakdown(this)
+}
+
+Span.prototype._inferServiceTargetAndDestinationService = function () {
   // `context.service.target.*` must be set for exit spans. There is a public
   // `span.setServiceTarget(...)` for users to manually set this, but typically
   // it is inferred from other span fields here.
@@ -173,33 +204,6 @@ Span.prototype.end = function (endTime) {
       }
     }
   }
-
-  this.ended = true
-  this._agent.logger.debug('ended span %o', { span: this.id, parent: this.parentId, trace: this.traceId, name: this.name, type: this.type, subtype: this.subtype, action: this.action })
-
-  if (this._capturedStackTrace !== null &&
-      this._agent._conf.spanStackTraceMinDuration >= 0 &&
-      this._duration / 1000 >= this._agent._conf.spanStackTraceMinDuration) {
-    // NOTE: This uses a promise-like thing and not a *real* promise
-    // because passing error stacks into a promise context makes it
-    // uncollectable by the garbage collector.
-    this._stackObj = new Value()
-    var self = this
-    gatherStackTrace(
-      this._agent.logger,
-      this._capturedStackTrace,
-      this._agent._conf.sourceLinesSpanAppFrames,
-      this._agent._conf.sourceLinesSpanLibraryFrames,
-      TEST ? null : filterCallSite,
-      function (_err, stacktrace) {
-        // _err from gatherStackTrace is always null.
-        self._stackObj.resolve(stacktrace)
-      }
-    )
-  }
-
-  this._agent._instrumentation.addEndedSpan(this)
-  this.transaction._captureBreakdown(this)
 }
 
 Span.prototype.setDbContext = function (context) {
@@ -222,7 +226,7 @@ Span.prototype.setHttpContext = function (context) {
  */
 Span.prototype.setDestinationContext = function (destCtx) {
   process.emitWarning(
-    '<span>.setDestinationContext() is deprecated, use <span>.setServiceTarget().',
+    '<span>.setDestinationContext() was never a public API and will be removed, use <span>.setServiceTarget().',
     'DeprecationWarning',
     'ELASTIC_APM_SET_DESTINATION_CONTEXT'
   )
